# tHMMsim

./: LICENSE  README.md  makefile  pyproject.toml
HMMsim/test/: test_core.py
