[tool.poetry]
name = "maserol"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scipy = "^1.10"
numpy = "^1.22"
matplotlib = "^3.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2"
pytest-cov = "^3.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]                                                           
fbuild = "maserol.figures.common:genFigure"
